# claude-code-local-proxy

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: ci.yml
scripts/launchd/: local.claude-code-local-proxy.plist.in
src/claude_code_local_proxy/: cli.py  config.py  egress_guard.py  proxy.py  sanitizer.py
src/claude_code_local_proxy/sanitizer_rules/: __init__.py  base.py  base_url.py  date_marker.py  timezone_marker.py
tests/claude_code_local_proxy/: test_cli.py  test_egress_guard.py  test_proxy.py  test_sanitizer.py  test_sanitizer_rules.py  test_smoke.py
